# Backend-CrimeImpulse

crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/: DOCKER_README.md  docker-compose.dev.yaml  docker-compose.yaml
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/.claude/skills/pytest/: SKILL.md
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/.claude/skills/python-typing-ops/: SKILL.md
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/.playwright-mcp/: deep-snapshot.md  page-2026-04-14T05-15-11-365Z.yml  page-2026-04-14T05-15-58-404Z.yml  page-2026-04-14T05-17-23-877Z.yml  page-2026-04-14T05-17-54-158Z.yml  page-2026-04-14T05-39-15-842Z.yml
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/: .dockerignore  .env.example  ALEMBIC_SETUP.md  CELERY_GUIDE.md  Dockerfile  LICENSE  pyproject.toml
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/alembic/: env.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/alembic/versions/: 4e81cb6cf038_.py  9899b7a38c40_.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/app/: __init__.py  main.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/app/core/: __init__.py  config.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/app/features/: __init__.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/app/features/crime_news/: __init__.py  models.py  repository.py  router.py  schemas.py  scraper.py  service.py  tasks.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/app/infrastructure/: celery_app.py  database.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/app/infrastructure/llm/: __init__.py  client.py
crimepulse--d4164e0daf63b88a938d947315ba6b377f6eda3d/backend/app/shared/: __init__.py  geolocations.py  types.py
